test/langtools/tools/javac/records/records_cant_have_extends_clause/RecordsCantHaveExtendsClause.out
RecordsCantHaveExtendsClause.java:12:21: compiler.err.expected: '{'
RecordsCantHaveExtendsClause.java:17:28: compiler.err.expected: '{'
2 errors
